BUG: Fixed bug where menu's would dissappear because of too much space

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  background-color: gray;
+  background-color: #032030;
+  color: white;
   display: flex;
   flex-direction: column;
   margin: 0;
