--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,3 @@
-body {
-  background: #141417;
-}
-
 button {
   border: 0;
   background: transparent;
@@ -9,6 +5,7 @@ button {
   color: inherit;
   font-size: 20px;
   width: 100%;
+  flex-wrap: nowrap;
 }
 
 h1 {
@@ -34,10 +31,11 @@ h1 {
   left: 0;
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 0 20px;
   height: 72px;
   width: 100%;
-  background: linear-gradient(to right, #9d50bb, #6e48aa);
+  background: linear-gradient(to right, #022b42, #003554);
   color: #f9f9f9;
 }
 
@@ -84,6 +82,7 @@ img {
   align-items: flex-start;
   flex-direction: column;
   width: 100%;
+  flex-wrap: nowrap;
 }
 
 .dropdown > button {
@@ -127,7 +126,7 @@ img {
   content: "";
   position: absolute;
   left: -9999px;
-  background: #202024;
+  background: #022b42;
   border-radius: 6px;
 }
 
@@ -217,14 +216,14 @@ img {
 
   .dropdown-menu {
     position: absolute;
-    top: 84px;
-    padding: 6px 24px 10px;
+    top: 72px;
+    padding: 4px 24px 10px;
     height: 120px;
     width: auto;
     overflow: visible;
     opacity: 0;
     visibility: hidden;
-    background: #202024;
+    background: #022b42;
     border-radius: 6px;
     place-items: start;
     translate: 0 24px;
